production ayarları postgresql için yapılandırıldı

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 django-environ = "*"
+sentry-sdk = "*"
+boto3 = "*"
+django-storages = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
